Fix h1 size on mobile

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -229,6 +229,6 @@ h1 {
     padding: 1rem 0.5rem;
   }
   h1 {
-    font-size: 1.3rem;
+    font-size: 1.9rem;
   }
 }
